# figure_identify

./: .gitignore  CMakeLists.txt  CodeRecognizerExample  FigureProject  build_and_run.sh  figure.cpp  figure_before_midterm.cpp
example/: main.cpp
include/: CodeRecognizer.h
src/: CodeRecognizer.cpp
